--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
+    <meta name="google-site-verification" content="KYSAzdfjrcyPxNwjRSwWn23WQlQlAecQ94eFl9ikoJo" />
     <title>Austin King'ori - Full Stack Web Developer</title>
   </head>
   <body class="bg-gray-100">
